# altcha-flutter

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml  publish.yml
android/: .gitignore  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  altcha_pbkdf2.cpp
android/src/main/kotlin/org/altcha/altcha_widget/: AltchaWidgetPlugin.kt
common/: altcha_pbkdf2_solver.h
darwin/Classes/: AltchaPbkdf2Bridge.h  AltchaPbkdf2Bridge.mm
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/altcha_widget_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: benchmark_page.dart  main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: altcha_widget.podspec
ios/Classes/: AltchaPbkdf2Bridge.h  AltchaPbkdf2Bridge.mm  AltchaWidgetPlugin.swift
ios/Runner/: GeneratedPluginRegistrant.m
ios/altcha_widget/: Package.swift
ios/altcha_widget/.build/index-build/arm64-apple-macosx/debug/index/db/v13/p81120--4d722a/: lock.mdb
lib/: altcha_widget.dart  altcha_widget_web.dart  widget.dart
lib/solver/: solve_altcha.dart
lib/src/: algorithms.dart  his_collector.dart  localizations.dart  native.dart  native_io.dart  native_solver.dart  native_stub.dart  widget.dart
lib/src/audio/: audio.dart  audio_io.dart  audio_stub.dart  audio_web.dart
lib/src/models/: challenge.dart  server_verification.dart
lib/src/pbkdf2/: pbkdf2.dart  pbkdf2_io.dart  pbkdf2_stub.dart  pbkdf2_web.dart
lib/src/widgets/: audio_button.dart  code_challenge.dart
linux/: CMakeLists.txt  altcha_widget_plugin.cc
linux/include/altcha_widget/: altcha_widget_plugin.h
macos/: altcha_widget.podspec
macos/Classes/: AltchaWidgetPlugin.swift
macos/altcha_widget/: Package.swift
test/: altcha_test.dart
windows/: CMakeLists.txt  altcha_widget_plugin.cpp  altcha_widget_plugin.h
windows/include/altcha_widget/: altcha_widget_plugin.h
